--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.scrollContainer {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100px; 
+}
+
+.scrollingImage {
+  height: 100%; 
+  display: block;
+}
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
